<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/title_menu_favorite"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_theme"
            android:icon="@drawable/ic_light_mode"
            android:title="@string/title_menu_theme"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/menu_notif"
            android:icon="@drawable/ic_notifications"
            android:title="@string/title_menu_notif"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/ic_about"
            android:title="@string/title_menu_about"
            app:showAsAction="collapseActionView" />
    </group>
</menu>