<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_follower"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_user" />

    <TextView
        android:id="@+id/tv_no_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_not_follower"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rv_list_user" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rv_list_user"
        app:layout_constraintStart_toStartOf="@+id/rv_list_user"
        app:layout_constraintTop_toTopOf="@+id/rv_list_user" />

</androidx.constraintlayout.widget.ConstraintLayout>